validator_derive/tests/compile-fail/range/unknown_arg.stderr
error: proc-macro derive panicked
 --> $DIR/unknown_arg.rs:3:10
  |
3 | #[derive(Validate)]
  |          ^^^^^^^^
  |
  = help: message: Invalid attribute #[validate] on field `s`: unknown argument `mi` for validator `range` (it only has `min`, `max`)
